# sysdig-sdk-python

./: .buildinfo  .editorconfig  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE.txt  Makefile  Pipfile  README.md  _config.yml  flake.nix  genindex.html  index.html  index.md  pyproject.toml  requirements.txt  sdcclient.py  setup.py  tox.ini
.github/: dependabot.yml
.openapi-generator/: FILES
api/: objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
doc/: Makefile  conf.py  index.rst  make.bat
docs/: Makefile  conf.py  index.rst  monitor.rst  requirements.txt  secure.rst
examples/: add_notification_email.py  add_policy.py  add_policy_v1.py  add_users_to_secure.py  alertformat.json  create-update_dashboard_from_file.py  create_access_keys.py  create_alert.py  create_alert_from_jsonfile.py  create_dashboard.py  create_dashboard_from_view.py  create_default_policies.py  create_default_policies_v1.py  create_sysdig_capture.py  dashboard.py  dashboard_backup_v1_restore_v2.py  dashboard_basic_crud.py  dashboard_ibm_cloud.py  dashboard_save_load.py  dashboard_scope.py  delete_alert.py  delete_all_policies.py  delete_all_policies_v1.py  delete_dashboard.py  delete_event.py  delete_policy.py  delete_policy_v1.py  download_dashboards.py  enable_disable.py  flip_alerts_enabled.py  get_agents_config.py  get_anchore_users_account.py  get_dashboard.py  get_data_advanced.py  get_data_datasource.py  get_data_promql_advanced.py  get_data_promql_instant_advanced.py  get_data_promql_instant_simple.py  get_data_promql_simple.py  get_data_simple.py  (+53 more)
fixtures/: custom_rules.yaml
sdcclient/: __init__.py  _client.py  _common.py  _ibmcloud.py  _monitor.py  _monitor_v1.py  _scanning.py  _secure.py  _secure_v1.py  ibm_auth_helper.py
specs/: __init__.py
sysdig_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: sample-falco-rules.yaml  start_agent.sh  stop_agent.sh  test_access_key_response_v1.py  test_access_keys_api.py  test_action.py  test_action_execution.py  test_action_execution_parameter_value.py  test_action_execution_status.py  test_action_executions.py  test_action_outputs_metadata.py  test_action_parameter_metadata.py  test_action_type.py  test_actions.py  test_activity_audit_api.py  test_additional_team_permissions_v1.py  test_agentless_ml_runtime_detection_content.py  test_agentless_ml_runtime_detection_content_all_of_fields.py  test_agentless_runtime_detection_content.py  test_agentless_runtime_detection_content_all_of_fields.py  test_all_sso_settings_response_v1.py  test_amazon_sqs_create_connection_info.py  test_amazon_sqs_update_connection_info.py  test_audit_event.py  test_audit_page.py  test_audit_supported_filter.py  test_audit_supported_filters_response.py  test_audit_trail_content.py  test_authenticated_connection_info_elasticsearch.py  test_authenticated_connection_info_kafka.py  test_authenticated_connection_info_webhook.py  test_base_action.py  test_base_connection_info_amazon_sqs.py  test_base_connection_info_chronicle.py  (+509 more)
(+1133 files in other folders)
