[tool.poetry]
name = "sdcclient"
version = "0.0.0" # Updated by poetry-dynamic-versioning
description = "Python client for Sysdig Platform"
authors = ["Sysdig Inc. <info@sysdig.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23"
pyaml = ">=20.4,<22.0"
requests-toolbelt = "^0.9.1"
urllib3 = "^1.26.0"
tatsu = [
    { version = "^4.4.0", python = "<3.8" },
    { version = "^5.5.0", python = "^3.8" }
]
sphinx = {version = "^3.3.1", optional = true}
sphinx-rtd-theme = { version = "^0.5.0", optional = true }

[tool.poetry.dev-dependencies]
mamba = "^0.11.1"
doublex = "^1.9.2"
doublex-expects = "^0.7.1"
expects = "^0.9.0"
flake8 = "^4.0.1"
coverage = "^6.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-material"]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
