[project]
name = "sdcclient"
# version = "0.0.0" # Will be configured by the tool.hatch.version.source in this file.
dynamic = ["version"] # Will be configured by the tool.hatch.version.source in this file.
description = "Python client for Sysdig Platform"
authors = [{ name = "Sysdig Inc.", email = "info@sysdig.com" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "requests~=2.31",
    "pyaml>=20.4,<22.0",
    "requests-toolbelt>=1.0.0,<2",
    "urllib3>=2.2.1,<3",
    "tatsu>=5.7.0,<5.9.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=3.3.1,<6.0.0",
    "sphinx-rtd-theme>=0.5,<1.1",
]

[dependency-groups]
dev = [
    "mamba>=0.11.1,<0.12",
    "doublex>=1.9.2,<2",
    "doublex-expects>=0.7.1,<0.8",
    "expects>=0.9.0,<0.10",
    "flake8>=3.8.4,<4",
    "coverage~=6.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs" # Will get the latest git tag to configure this project's version
